# fotbalek

./: .gitignore  CMakeLists.txt  Circle.h  Collision.cpp  Collision.h  GameConstants.cpp  PhysicEngine.cpp  PhysicEngine.h  README.md  Rectangle.h  RigidBody.cpp  RigidBody.h  Shape.cpp  Shape.h  Timer.cpp  Timer.h  Vector2.cpp  Vector2.h  checkpoint.txt  main.cpp  todo.txt
src/: ClientObjectsSpawner.cpp  ClientObjectsSpawner.h  ServerObjectsSpawner.cpp  ServerObjectsSpawner.h  SettingsDefines.h  main.cpp  mainClient.cpp  mainServer.cpp
src/Components/: ClientMenuInputHolder.h  InputHolder.h  MovementInputHolder.h  Transform.h
src/Components/Graphic/: Camera.h  Label.h  Sprite.h
src/Components/Graphic/Layers/: RenderingLayer_Background.h  RenderingLayer_Foreground.h  RenderingLayer_UI.h
src/Components/Graphic/Shapes/: CircleShape.h  RectangleShape.h
src/Components/Logic/: BallComp.h  GameState.h  MovementInputHolder.h  PlayerComp.h
src/Components/Network/: GameStateChange.h  NetworkId.h
src/Components/Physic/: ColliderTrigger.h  RigidBody.h
src/Components/Physic/Shapes/: CircleCollider.h  RectangleCollider.h
src/Components/UI/: Button.h
src/Constants/: ClientGameConstants.cpp  ClientGameConstants.h  GameConstants.cpp  GameConstants.h  NetworkConstants.cpp  NetworkConstants.h  ServerGameConstants.cpp  ServerGameConstants.h
src/Core/: ComponentManager.h  ComponentStorage.h  EngineSettings.h  EngineStructures.h  EngineStructures.hpp  GameEngine.h  GameObject.h  SignatureManager.h
src/Game_Logic/: InputSystem.h  MenuSystem.h  PlayerLogicSystem.h  ServerLogicSystem.h
src/Graphic/: GraphicSystem.h
src/Network/: PlayerNetworkReceiverSystem.h  PlayerNetworkSenderSystem.h  PlayerNetworkSystem.h  ServerNetworkReceiverSystem.h  ServerNetworkSenderSystem.h
src/Network/API/Client/: Client.cpp  Client.h  Message.h  Player.h  PlayerClient.cpp  PlayerClient.h  Score.h  UdpBase.h
src/Network/API/Server/: PlayerServer.cpp  PlayerServer.h  Server.cpp  Server.h  UdpServer.cpp  UdpServer.h
src/Physic/: Collision.cpp  Collision.h  PhysicSystem.h
src/Utils/: Declarations.h  GameConstants.cpp  GameConstants.h  Timer.cpp  Timer.h  Vector2.h  declarations.h
